# KR_5_work_with_DB

./: .gitignore  README.md  pyproject.toml
src/: README.md  class_api.py  class_dbmanager.py  class_save.py  config.py  employers.py  main.py  user_interaction.py  vacancies.py
