[tool.poetry]
name = "kr-5-work-with-db"
version = "0.1.0"
description = ""
authors = ["Boris <borik1and@gmail.com>"]
readme = "README.md"
packages = [{include = "kr_5_work_with_db"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
